[package]
name = "rate_limiters"
version = "0.1.8"
edition = "2021"
description = "Flexible and easy-to-use Rust library for implementing rate limits."
license = "MIT"

authors = ["Nikita Smith"]
repository = "https://github.com/NikitaSmithTheOne/rate-limiters-rs"
homepage = "https://github.com/NikitaSmithTheOne/rate-limiters-rs"
documentation = "https://docs.rs/rate_limiters"
readme = "README.md"

keywords = ["rate-limiter", "ratelimit", "throttle", "token-bucket", "sliding-window"]
categories = ["algorithms", "concurrency", "network-programming", "asynchronous", "web-programming"]

exclude = [".github", "target/*", "scripts/*"]
